/*
 * $Id: ChangeLog,v 1.3502 2004/10/20 03:13:59 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-10-20 21:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/utils/hbpp/hbpp.c
    + added missing FILE *hb_comp_PPTrace = NULL;

2004-10-19 20:13 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    + Added support for #directive expanasions in #include directives.
  * include/hbcomp.h
  * include/hberrors.h
  * source/compiler/cmdcheck.c
  * source/compiler/harbour.c
  * source/compiler/hbgenerr.c
  * source/compiler/hbusage.c
  * source/pp/ppcore.c
  * source/rtl/pplib.c
    + Added support for -PT command line argument, to generate Pre-processor trace (.ppt) file.

  * utils/xbscript/rp_run.src
  * utils/xbscript/xbs_harb.ch
  * utils/xbscript/xbscript.prg
    + Added support for IN operator.

2004-10-18 14:18 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * make_drw.sh
  * bin/hb-func.sh
  * bin/hb-mkslib.sh
  * bin/postinst.sh
  * config/darwin/gcc.cf
  * include/thread.h
  * source/rtl/filesys.c
  * source/rtl/gtsln/gtsln.h
    ! Updates for building on Darwin.
  * source/vm/hbi18n.c
  * source/vm/hvm.c
    * A couple of typos fixed.
  * source/tip/base64x.c
    ! Changed non-standard #include "malloc.h" to #include <stdlib.h>

2004-10-15 12:45 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/ct/disk.c
    - fix HB_FUNC( DRIVETYPE ) to allow space for trailing '\0' in call
      to hb_xgrab()

2004-10-15 00:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! fixed seek when SOFTSEEK OFF and the first found key is
      is out of scope range.

2004-10-14 19:45 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c